fix(acp): return defensive snapshots from getAvailable* methods
The ACP client exposed `getAvailableModels()` / `getAvailableModes()` /
`getAvailableCommands()` / `getAvailableConfigOptions()` as
`Collections.unmodifiableList(...)` — a live view backed by the mutable
internal list. UI services such as `ModelSelectorService` cached the
returned list across prompts.

When the ACP agent is restarted (Copilot CLI does this after every
prompt via `--resume`), `ActiveAgentManager` builds a brand-new
`AcpClient` instance. The previous client's internal list keeps living
inside the UI cache as a live view that now points at a stale, often
empty, backing list. The model dropdown disappeared after the first
prompt because `ModelSelectorAction.update()` saw zero entries.

Switch all four `getAvailable*` accessors to `List.copyOf(...)` so the
caller receives an immutable snapshot decoupled from the client's
internal list. Add a regression test that confirms a previously
returned snapshot is unaffected by a subsequent `session/new` that
mutates the underlying list.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>